Visual tweaks, spacing and a11y fix for the cart note and duplicate IDs

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -46,6 +46,10 @@ cart-drawer:not(.is-empty) .cart-drawer__collection {
   display: none;
 }
 
+.cart-drawer__warnings--has-collection .cart__login-title {
+  margin-top: 2.5rem;
+}
+
 .drawer.active .drawer__inner {
   transform: translateX(0);
 }
@@ -195,7 +199,7 @@ cart-drawer-items {
 }
 
 .cart-drawer .cart-items thead {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .cart-drawer .cart-items thead tr {
@@ -203,7 +207,7 @@ cart-drawer-items {
 }
 
 .cart-drawer .cart-item:last-child {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .cart-drawer .cart-items td {
@@ -226,7 +230,7 @@ cart-drawer-items {
   justify-content: flex-end;
 }
 
-.cart-drawer .cart-item__quantity {
+.cart-drawer .cart-items .cart-item__quantity {
   padding-top: 0;
   grid-column: 2 / 5;
 }
@@ -246,6 +250,7 @@ cart-drawer-items {
 }
 
 .cart-drawer .tax-note {
+  margin: 1.2rem 0 1rem auto;
   text-align: left;
 }
 
